[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-toon"
version = "0.1.3"
description = "TOON (Token-Oriented Object Notation) encoder/decoder for Python - Bidirectional JSON-to-TOON converter optimized for LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["toon", "llm", "encoding", "token-efficient", "data-format"]
authors = [
    { name = "Xavi Vinaixa", email = "xavi@sorensen.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/xaviviro/python-toon"
Repository = "https://github.com/xaviviro/python-toon"
Documentation = "https://github.com/toon-format/spec"
"Bug Tracker" = "https://github.com/xaviviro/python-toon/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[project.scripts]
toon = "toon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# Ignore naming conventions (N) as they can be too strict
ignore = ["N"]

[tool.mypy]
python_version = "3.9"  # Changed from 3.8 to 3.9 (minimum for mypy)
warn_return_any = false  # Less strict
warn_unused_configs = true
disallow_untyped_defs = false  # Less strict
check_untyped_defs = false  # Less strict
